# weak-strong-consistency

./: .gitignore  README.md  REPRODUCTION.md  pyproject.toml
dataset/: README.md
prompt_resources/: templates_generic.yaml
results/analysis/bank77_metrics/: agreement_id_oos_decomposition.csv  agreement_reliability.csv  agreement_reliability_by_split.csv  confidence_agreement_penalty.csv  confidence_agreement_quadrants_by_split.csv  correctness_ranking_scores.csv  msp_baseline.csv  report.md  single_model_accuracy.csv  single_model_accuracy_by_split.csv
results/analysis/clinc_metrics/: agreement_reliability.csv  agreement_reliability_by_split.csv  confidence_agreement_penalty.csv  confidence_agreement_quadrants.csv  correctness_ranking_scores.csv  msp_baseline.csv  report.md  single_model_accuracy.csv  single_model_accuracy_by_split.csv
results/dual_cache/bank77/gemma-4-31B-banking77-run0/: cache_banking77_test.json
results/dual_cache/clinc/gemma-4-31B-run0-all/: cache_plus.json
src/: agreement_config.py  agreement_metrics.py  agreement_runner.py  analyze_consistency.py  configs.py  llm_api.py  logprob_classifier.py  run_task.py
src/legacy/: __init__.py  confidence_fusion.py  ood_evaluator.py
